use exec table as start, update api.yaml, switch from id to host
